--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "image-size": "^0.9.3",
     "next": "10.0.0",
     "node-sass": "^4.14.1",
     "react": "17.0.1",
