--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.11.1",
     "image-size": "^0.9.3",
+    "lodash": "^4.17.20",
     "next": "10.0.0",
     "node-sass": "^4.14.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "styled-components": "^5.2.0"
   }
 }
